[gd_scene load_steps=9 format=3 uid="uid://bjw6sh7j2lsq3"]

[ext_resource type="Script" path="res://src/perry_dodge/perry_dodge.gd" id="1_mjawl"]
[ext_resource type="PackedScene" uid="uid://5w3s3bekcgvy" path="res://src/perry_dodge/enemy.tscn" id="2_ndgye"]
[ext_resource type="Texture2D" uid="uid://dmi16l057ro3v" path="res://src/perry_dodge/textures/background.png" id="3_lj6dr"]
[ext_resource type="Script" path="res://src/perry_dodge/mob_path.gd" id="4_27mf4"]
[ext_resource type="PackedScene" uid="uid://0dmkhtys2fv3" path="res://src/perry_dodge/player.tscn" id="5_10pmt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ajf4l"]
texture = ExtResource("3_lj6dr")
texture_region_size = Vector2i(128, 128)
2:0/0 = 0
3:0/0 = 0
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_rfxxs"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_ajf4l")

[sub_resource type="Curve2D" id="Curve2D_mulw1"]

[node name="PerryDodge" type="Node2D"]
script = ExtResource("1_mjawl")
mob_scene = ExtResource("2_ndgye")

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_rfxxs")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 196608, 0, 2, 131072, 0, 4, 196608, 0, 3, 0, 0, 65540, 0, 0, 65539, 65536, 0, 65538, 0, 0, 65537, 65536, 0, 131073, 0, 0, 131074, 131072, 0, 131075, 131072, 0, 196611, 196608, 0, 131076, 196608, 0, 196612, 0, 0, 262148, 65536, 0, 327684, 131072, 0, 327683, 0, 0, 327682, 65536, 0, 327681, 196608, 0, 327680, 0, 0, 262144, 65536, 0, 196608, 131072, 0, 131072, 196608, 0, 65536, 65536, 0, 196609, 131072, 0, 196610, 65536, 0, 262145, 0, 0, 262146, 131072, 0, 262147, 0, 0, 393219, 196608, 0, 393220, 131072, 0, 458756, 65536, 0, 458755, 0, 0, 458754, 0, 0, 458753, 65536, 0, 393217, 0, 0, 393216, 196608, 0, 393218, 131072, 0, 458752, 131072, 0, 524290, 65536, 0, 589824, 65536, 0, 524288, 131072, 0, 589827, 131072, 0, 458757, 131072, 0, 131077, 131072, 0, 5, 196608, 0, 327685, 196608, 0, 589829, 196608, 0, 524292, 131072, 0, 589825, 131072, 0, 524289, 131072, 0, 589828, 131072, 0, 262149, 131072, 0, 196613, 65536, 0, 524291, 65536, 0, 589826, 196608, 0, 524293, 0, 0, 393221, 0, 0, 65541, 0, 0)

[node name="ScoreAndMobTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="StartPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(360, 640)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_mulw1")
script = ExtResource("4_27mf4")

[node name="MobPathFollow" type="PathFollow2D" parent="MobPath"]
unique_name_in_owner = true
position = Vector2(712, 0)
rotation = 1.56455

[node name="Player" parent="." instance=ExtResource("5_10pmt")]
unique_name_in_owner = true
